# datasette-plot

./: .gitignore  Justfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml  test.yml
datasette_plot/: __init__.py
datasette_plot/frontend/components/: marks.tsx
datasette_plot/frontend/targets/: main.css  main.tsx
datasette_plot/static/: main.min.css  main.min.js
tests/: test_plot.py
